compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__loop_no_boolean_cond.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/loop_no_boolean_cond.test
input_file: compiler/hachi-tests/tests/ui/type/loop_no_boolean_cond.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::type_mismatch

  × type mismatch
   ╭─[tests/ui/type/loop_no_boolean_cond.test:2:19]
 1 │ fn loop() {
 2 │   for (let i = 0; i;) {
   ·                   ┬┬
   ·                   │╰── expected type bool
   ·                   ╰── the expression has type i32
 3 │     let k = i;
   ╰────
